<resources>
    <string name="app_name">UBLost</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home_page">Home Page</string>
    <string name="search_floorplans">Search Floor Plans</string>
    <string name="select_floor">Select Floor</string>
    <string name="Capen_Library"> Capen Library </string>
    <string name="Lockwood_Library">Lockwood Library</string>
    <string name="Music_Library">Music Library</string>
    <string name="floor_1">Floor 2</string>
    <string name="floor_2">Floor 3</string>
    <string name="floor_3">Floor 4</string>
    <string name="navigate_me">Navigate Me</string>
    <string-array name="my_buildings">
        <item>Capen Library</item>
        <item>Lockwood Library</item>
        <item>Norton Hall</item>
        <item>Davis Hall</item>
        <item>Music Library</item>
    </string-array>
    <string-array name="search_capen_floors">
        <item>Basement</item>
        <item>Floor 1</item>
        <item>Floor 2</item>
        <item>Floor 3</item>
    </string-array>
    <string-array name="my_locations">
        <item>Capen Library</item>
        <item>Lockwood Library</item>
        <item>Norton Hall</item>
        <item>Davis Hall</item>
        <item>Music Library</item>
        <item>Natural Science Complex</item>
        <item>Student Union</item>
        <item>Knox Hall</item>
    </string-array>
    <string name="my_location">My Location</string>
    <string name="my_building">My Buildings</string>
    <string name="title_activity_menu_bar_version2">MenuBarVersion2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="ublost">UBLost</string>
    <string name="remember_me">Remember Me</string>
    <string name="slogan">Helping You Be on Your Way</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email_address">email address</string>
    <string name="confirm_password">confirm password</string>
    <string name="terms">I agree to the Terms and Conditions</string>
    <string name="back2login">Already have an account? Login now</string>
    <string name="storage_permission_denied_message_osm">No access to external storage. Permission needed for storing map tiles in the OSMDroid example.</string>

    <string-array name="status_array">
        <item>Student</item>
        <item>Faculty</item>
    </string-array>

    <string name="button_close">Close</string>
    <string name="capen_floor_3">Capen Floor 3</string>
    <string name="gradient_background">gradient background</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="log_in_to_continue">Log in to continue</string>

    <string name="saved_paths">Saved Paths</string>
    <string name="capen_floor_2">Capen Floor 2</string>
    <string name="capen_floor_4">Capen Floor 4</string>
    <string name="north_campus">North Campus</string>
    <string name="lightbulb">light bulb</string>
    <string name="bookshelf">bookshelf</string>
    <string name="violin">violin</string>
    <string name="logo">logo</string>
    <string name="locations">Locations</string>
    <string name="o_brian_hall">O\'Brian Hall</string>
    <string name="student_union">Student Union</string>
    <string name="alumni_arena">Alumni Arena</string>
    <string name="math_building">Math Building</string>
    <string name="column">column</string>
    <string name="title_activity_friends">FriendsActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

</resources>
