<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/UBLostLogo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/ublost"
        android:scaleType="fitCenter"
        android:src="@drawable/ub_lost_logo" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/UBLostLogo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/transparent_box"
            android:orientation="vertical">

            <TextView
                android:id="@+id/UBlostTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:text="@string/ublost"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/helpTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/slogan"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <AutoCompleteTextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/roundedwhite"
                android:drawableStart="@drawable/ic_user"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="7dp"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="7dp"
                android:paddingLeft="7dp"
                android:paddingEnd="7dp" />

            <AutoCompleteTextView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/roundedwhite"
                android:drawableStart="@drawable/ic_padlock"
                android:drawableLeft="@drawable/ic_padlock"
                android:drawablePadding="7dp"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="7dp"
                android:paddingLeft="7dp"
                android:paddingEnd="7dp" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/login"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textStyle="normal" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/login"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textStyle="normal" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>