<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/darkenbackground2"
    tools:context=".HomeActivity"
    android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:layout_marginRight="20dp">

            <TextView
                android:id="@+id/txtlocations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Music_Library"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtlocations"
                android:layout_marginTop="6dp"
                android:text="@string/north_campus"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/violin"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/violin" />

        </RelativeLayout>

        <ListView
            android:layout_marginTop="150dp"
            android:padding="20dp"
            android:id="@+id/search_music_floors"
            android:layout_width="wrap_content"
            android:layout_height="450dp"/>

</LinearLayout>